2007-10-30 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Add tests for history buffer. Add ignore_leading_spaces option for 
	  history searches for forward_search_history, and reverse_search_history.
	
2007-10-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Patch as provided by pan. Changed ensure_text to decode to 
	  consoles codepage instead of utf8, to ensure proper printing
	  of tab completion of files/directories with non ascii characters
	
2007-07-19 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix bug that made copying fail in some cases 
	* Fix bug in parse_and_bind, reported by Michael Graz.
	* Change version string to 1.5.svn
	
2007-05-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Increasing version number to 1.4.4
	* Fixing typo in changelog
	
2007-05-29 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixing bug in copy_selection_to_clipboard. Didn't work
	  when selection started at beginning of line

2007-05-24 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Additions to manual

2007-05-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fixing pageup pagedown scrolling of window
	* Begining work on killring. ctrl-k ctrl-y will not use clipboard anymore

2007-05-14 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* pre_inputhook and startup_hook were not functioning properly.

2007-05-09 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Fix ticket #153, python2.3 installation problem
	* Updates to documentation

2007-04-20 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Change in how Ironpython proagates keyboardinterrupts in console. Still
	  some issues to resolve to get same traceback as for plain ironpython when 
	  pressing ctrl-c.
	
2007-04-18 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>
	* Removing some test methods that should not have been comitted at rev 2246
	
2007-04-17 Jörgen Stenarson  <jorgen.stenarson -at- bostream.nu>